# Hometasks

./: README.md
lesson_10_clustering_part2/: lesson_10_clustering_agl_dbscan_hometask.ipynb
lesson_12_rec_sys_part_2/: Recommendation systems, models and approaches.ipynb  lesson_21_apriori.ipynb
lesson_13_DE_introduction/: data_engineering_introduction_lecture_13.pptx  hometask_lecture_13.rar
lesson_13_DE_introduction/hometask/: README.md  docker-compose.yml  requirements.txt  vasko_shop.db
lesson_16_tensorflow_keras/: keras_p1_linear_nn.ipynb  keras_p2_deep_nn.ipynb  main.py  pyproject.toml  tensorflow_overview.ipynb
lesson_16_tensorflow_keras/my_new_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
lesson_16_tensorflow_keras/my_new_model/variables/: variables.data-00000-of-00001  variables.index
lesson_16_tensorflow_keras/saved/: fingerprint.pb  saved_model.pb
lesson_17_cv_intro/: main.py  pyproject.toml
lesson_20_generative_cv/: lesson_20_generative_cv.ipynb
lesson_2_pandas/: Energy_Indicators.xls  Scimagojr.xlsx  lesson_2_hometask_pandas.ipynb
lesson_3_linear_regression/: lesson_3_lin_reg_hometask.ipynb
lesson_4_logistic_regression/: Lesson_4_Logistic_Regression_SVM.ipynb
lesson_5_decision_trees/: Source.gv  lesson_5_dt_hometask.ipynb
lesson_6_nn/: lesson_6_nn_hometask.ipynb
lesson_7_evaluation/: lesson_10_evaluation.ipynb
lesson_8_supervised_ml/: lesson_8_supervised_ml_cover.ipynb  lesson_8_supervised_ml_cover_hometask.ipynb  submission.csv
lesson_9_clustering_part_1/: lesson_9_part_1_kmeans_hometask.ipynb
(+11 files in other folders)
