[project]
name = "lesson-25-tensorflow-keras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "pandas>=3.0.3",
    "tensorflow>=2.21.0",
]
