[project]
name = "lesson-26-cv-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.5.0",
    "matplotlib>=3.10.9",
    "np>=1.0.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyarrow<15.0.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
]
